--- a/src/container/Carousel.css
+++ b/src/container/Carousel.css
@@ -6,15 +6,19 @@
 .inner {
     white-space: nowrap;
     transition: transform 0.5s;
+    display:row
+    
 
 }
 
 .carousel-item {
     display: inline-flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 200px;
+    height: 250px;
     color: #fff;
+    
 }
 
 .indicators {
