--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
   text-align: center;
 }
 body {
-  background: linear-gradient(90deg, green, white)
+  /* background: linear-gradient(90deg, #fbeec1, #8d8741) */
+  background-color: #31708e;
+  zoom: 150%;
 }
 
 .App-logo {
@@ -40,6 +42,11 @@ body {
   }
 }
 
+h1 {
+  color: #5085a5;
+}
+
 h2 {
   margin: 0px;
+  color: #8fc1e3;
 }
