--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 body {
   /* background: linear-gradient(90deg, #fbeec1, #8d8741) */
   background-color: #31708e;
-  zoom: 150%;
+  /* zoom: 150%; */
 }
 
 .App-logo {
@@ -42,11 +42,7 @@ body {
   }
 }
 
-h1 {
-  color: #5085a5;
-}
-
-h2 {
+h1 ,h2 {
   margin: 0px;
   color: #8fc1e3;
 }
