--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   /* background: linear-gradient(90deg, #fbeec1, #8d8741) */
   /* background-color: #31708e; */
   /* zoom: 150%; */
-  background-image: url("./images/j-photos-yY1KhFBlisg-unsplash.jpg");
+  background-image: url("./images/46ef3f72445533.5ead053854cf3.png");
   background-size: 100%;
   background-repeat: no-repeat;
 }
@@ -49,12 +49,13 @@ body {
 
 h2{
   margin: 0px;
-  color: #8fc1e3;
+  color: whitesmoke;
 }
 
 h1 {
-  margin: 0px;
-  color: #8fc1e3;
+  margin: 5px;
+  text-align: left;
+  color: white;
   font-family: Fredericka the Great;
 }
 
@@ -65,6 +66,6 @@ h1 {
 
 .button {
   background-color: #8fc1e3;
-  color: #31708e;
+  color: whitesmoke;
   border-color: #5085a5;
 }
